#3 회원가입 로직 구성 (확인 x 미완성) 스크립트문 작성중 	비밀번호 암호화 아직 미완성 	회원가입 화면 구현 완료 스크립트문 위와 동일  -hyun-

--- a/JOBNOM/src/main/webapp/resources/css/header.css
+++ b/JOBNOM/src/main/webapp/resources/css/header.css
@@ -21,11 +21,11 @@
          color:#000000;
          padding: 8px;
       }
-      /* 세션 */
+      세션
       section{
          width: 80%;
          margin: 0 auto;
-         height: 2000px;
+        
       }
       body{
          width: 100%;
