--- a/JOBNOM/src/main/webapp/resources/css/mypage/interviewList.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/interviewList.css
@@ -117,7 +117,6 @@
         
         /*팝업창*/
 		#popup{
-		  
 		    display: none; /*숨기기*/
 		    position: fixed;
 		    position: fixed;
@@ -127,22 +126,15 @@
 		    height: 100%;
 		    z-index: 10;
 		    background-color: rgba(0, 0, 0, 0.755);
-		
 		}
 		.popupAll{
 		    display: flex;
-		    
 		}
-		
 		#popmenu {
-		
 		    width: 40%;
-		    height: 700px;
+		    height: max-content;
 		    background: #fff;
 		    margin-left: 310px;
-		    margin-top: 30px;
-		
-		  
 		}
 		.popmenuInsertAll{
 		    display: flex;
@@ -152,16 +144,13 @@
 		    padding-top: 15px;
 		    width: 100%;
 		    height: 50px;
-		
 		    padding-left: 15px;
-		    
-		
 		}
 		.findingMeDetailCancel{
 		    border: none;
 		}
 		.popmenuInsertClose{
-		  border-radius: 12px;
+		  	border-radius: 12px;
 		    right: 0;
 		    top: 0;
 		    background: wihte;
@@ -173,14 +162,11 @@
 		    font-weight: bold;
 		    border-radius: 5px;
 		    margin-right: 10px;
-		    margin-top: 40px;
+		    margin-top: 20px;
 		    margin-left: 10px;
-		   
-		
 		}
 		.submitByttonBox{
-		   display: flex;
-		   
+		   	display: flex;
 		}
 		.fa-window-close{
 		    font-size: 30px;
@@ -191,50 +177,39 @@
 		    padding-top: 15px;
 		    padding-left: 15px;
 		}
-		
 		.popmenuEnterprise{
 		    display: flex;
 		    padding-top: 25px;
 		    padding-left: 15px;
-		
-		
 		}
 		.popmenuEnterpriseName{
 		    margin-left: 120px;
 		    width: 300px;
 		    height: 35px;
-		
 		}
 		.popmenuTital{
 		    display: flex;
 		    padding-top: 30px;
 		    padding-left: 15px;
-		
 		}
-		
 		.popmenuTitalName{
 		    margin-left: 132px;
 		    width: 300px;
 		    height: 35px;
-		
 		}
 		.popmenuContents{
 		    display: flex;
 		    padding-top: 30px;
 		    padding-left: 15px;
 		}
-		
 		.popmenuContentsName{
 		    margin-left: 132px;
-		 
-		
 		}
 		/*///// 여기서 부터 리뷰별//// */
 		.companyStar-box{
 		    display: flex;
 		    padding-top: 20px;
 		    padding-left: 15px;
-		 
 		}
 		.blessedStar-box{
 		    display: flex;
@@ -250,65 +225,50 @@
 		    display: flex;
 		    padding-top: 20px;
 		    padding-left: 15px;
-		    
 		}
-		
 		.companyTitle{
 		    width: 150px;
-		
 		} 
 		.blessedTitle{
 		    width: 150px;
-		
 		}
 		.promotionTitle{
 		    width: 150px;
-		
 		}
 		.executiveTitle{
 		    width: 150px;
-		
 		}
-		
-		
-		
 		.companyStar {
 		    background-image: url("../../image/Hire/starGreen.png");
-		   background-size: cover;
-		   width: 40px;
+			background-size: cover;
+			width: 40px;
 		    height: 40px;
 		    margin-left: 20px;
-		    
-		
 		}
 		.blessedStar {
 		    background-image: url("../../image/Hire/starGreen.png");
-		   background-size: cover;
-		   width: 40px;
+			background-size: cover;
+			width: 40px;
 		    height: 40px;
 		    margin-left: 20px;
 		}
 		.promotionStar {
-		     background-image: url("../../image/Hire/starGreen.png");
-		   background-size: cover;
-		   width: 40px;
+			background-image: url("../../image/Hire/starGreen.png");
+		   	background-size: cover;
+		   	width: 40px;
 		    height: 40px;
 		    margin-left: 20px;
-		
 		}
 		.executiveStar {
 		    background-image: url("../../image/Hire/starGreen.png");
-		   background-size: cover;
-		   width: 40px;
+		   	background-size: cover;
+		   	width: 40px;
 		    height: 40px;
 		    margin-left: 20px;
-		
 		}
-		
 		.companyStar.on{
 		     background-image: url("../../image/Hire/starGreenOn.png");
 		  }
-		
 		.blessedStar.on{
 		     background-image: url("../../image/Hire/starGreenOn.png");
 		}
@@ -318,13 +278,8 @@
 		.executiveStar.on{
 		    background-image: url("../../image/Hire/starGreenOn.png");
 		}
-		
-		
 		/*///// 여기까지 리뷰별//// */
-		
-		
 		.GradeboxSubmit{
-		  
 		    border-radius: 12px;
 		    right: 0;
 		    top: 0;
@@ -337,31 +292,23 @@
 		    font-weight: bold;
 		    border-radius: 5px;
 		    margin-right: 10px;
-		    margin-top: 40px;
+		    margin-top: 20px;
 		    margin-left: 60px;
-		
 		}
-		
-		
-		
-		
-		
 		/* 여기는 리뷰 옆 주의사항 */
 		#popmenuInfo{
 		    width: 20%;
-		    height: 400px;
+		    height: max-content;
 		    background: #fff;
-		
-		    margin-left: 50px;
-		    margin-top: 30px;
+			margin-left: 50px;
+			margin-top: 30px;
 		}
 		.popmenuInfoTitle{
 		    font-size: 20px;
-		    padding-top: 20px;
+		    padding-top: 10px;
 		    padding-left: 10px;
 		    padding-right: 10px;
 		}
-		
 		.popmenuInfoContents{
 		
 		    padding-top: 10px;
