#13 로그인 암호화 정규표현식 완료 / 회원가입 정규표현식 이메일,비밀번호 중복체크 작업중 / 이력서 작업중

--- a/JOBNOM/src/main/webapp/resources/css/enroll.css
+++ b/JOBNOM/src/main/webapp/resources/css/enroll.css
@@ -37,9 +37,12 @@ body{
       width: 100px;
       height: 100px;
    }
-   .info{
-      margin: 30px auto;
-      width: 30%;
-      text-align: left;
-      display: flex;
-   }
+	.info{
+	   margin: 30px auto;
+	   width: 30%;
+	   text-align: left;
+	   display: flex;
+	}
+	.searchbar_section{
+		display:none;
+	}
