--- a/JOBNOM/src/main/webapp/resources/css/header.css
+++ b/JOBNOM/src/main/webapp/resources/css/header.css
@@ -103,4 +103,11 @@
 	    color: #686a6d;
 	    z-index: 2;
 	}
+	.header_md{
+		z-index:1050 !important;
+	}
+	section,#content{
+		padding-top: 158px !important;
+	}
+	
 	
