--- a/JOBNOM/src/main/webapp/resources/css/mypage/myProfile.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/myProfile.css
@@ -179,6 +179,7 @@
             background-color: #fff;
             position: fixed;
             bottom: 0;
+            left:0;
             z-index: 999;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.08);
         }
