#1222 16:03 기업 멤버십 가입 -김정민

--- a/JOBNOM/src/main/webapp/resources/css/company/com_my_page/com_mypage.css
+++ b/JOBNOM/src/main/webapp/resources/css/company/com_my_page/com_mypage.css
@@ -67,3 +67,13 @@ img{
 	margin:0 auto;
 	text-align: center;
 }
+.jmkbtn{
+		background-color:#00c362;
+		color:#fff;
+		text-align:center;
+		border-radius:5px;
+		font-weight:bold;
+	}
+.membership_benefits{
+	border: 2px solid black;
+}
