#16 이메일 인증완료, 회원가입 끝 폰트,이미지만 넣으면 끝남. 	이메일 인증 api로 인해 poom.xml, web.xml, email-context.xml파일 추가 	(메이븐 풀받고 메이븐 업데이트 한번씩 부탁) 	head.css파일에 sction{margin:0 auto;}지움

--- a/JOBNOM/src/main/webapp/resources/css/enroll.css
+++ b/JOBNOM/src/main/webapp/resources/css/enroll.css
@@ -46,3 +46,41 @@ body{
 	.searchbar_section{
 		display:none;
 	}
+	.email_certification_check,
+	.dupliBtnMember,
+	.dupliBtnEnter,
+	.dupliBtnEnterPw,
+	.dupliBtnMemberPw{
+		margin-top:10px;
+	}
+	input[type="number"]::-webkit-outer-spin-button,
+	input[type="number"]::-webkit-inner-spin-button {
+	    -webkit-appearance: none;
+	    margin: 0;
+	}
+	.ent_submit_email, .submit_email{
+		margin-left:20px;
+	}
+	.time,.ent_time{
+		margin-left:10px;
+	}
+	.jumbotron{
+		background-color: #fff !important;
+	}.mar{
+		margin-bottom:200px;
+	}
+	#container,html{
+		background-color:#e6e4e46b;
+		
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
