--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireAnnouncement.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireAnnouncement.css
@@ -17,7 +17,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     margin: 0 auto;
-    height: 2000px;
+    height: 1500px;
     min-height: 100%;
 
   }
@@ -227,7 +227,10 @@
 
 .announcementTop, .announcementBottom{
     display: flex;
+
 }
+
+
 
 
 
@@ -296,14 +299,14 @@
 .questList{
     font-size: 16px;
     color: gray;
-    padding-top:20px ;
-    padding-bottom:20 ;
+    padding-top:10px ;
+    padding-bottom:10px ;
     padding-left: 10px;
   
 
 }
 .questListAll{
-    padding-top:20px ;
+    padding-top:10px ;
     height: 400px;
 }
 .questListDetail{
@@ -314,5 +317,5 @@
     
     color: gray;
     padding-top:10px ;
-    padding-bottom:20 ;
+    padding-bottom:10px ;
 }
