--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireFavorites.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireFavorites.css
@@ -7,7 +7,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     margin: 0 auto;
-    height: 2000px;
+    height: 1300px;
     min-height: 100%;
 
   }
@@ -168,7 +168,7 @@
     padding: 10px;
     margin-left: 30px;
     width: 75%;
-    height: 300px;
+    height: 850px;
     background-color: #f7fdfa;
 }
 .myFavoritesViewInfo{
@@ -186,12 +186,17 @@
 .myFavoritesList{
     border-top: solid rgb(176, 174, 174);
     padding-top: 20px;
+    padding-bottom: 20px;
     font-size: 16px;
     display: flex;
+
 }
 .myFavoritesListAll>div{
     padding-left: 10px;
     padding-top: 10px;
+}
+.myFavoritesFlax{
+	display: flex;
 }
 .myFavoritesDetail{
     display: flex;
@@ -200,4 +205,7 @@
     padding-left: 10px;
 }.myFavoritesDetai3{
     padding-left: 10px;
+}
+#pageBar{
+	padding-top: 12px;
 }
