#16 비밀번호 변경, 이메일 변경(이메일인증), 회원탈퇴, 활동내역화면전환(ajax)
	-hyeon-

--- a/JOBNOM/src/main/webapp/resources/css/mypage/mypagefrist.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/mypagefrist.css
@@ -80,4 +80,9 @@
         .form-gruop{
             padding-bottom: 10px;
         }
+        input[type="number"]::-webkit-outer-spin-button,
+		input[type="number"]::-webkit-inner-spin-button {
+		    -webkit-appearance: none;
+		    margin: 0;
+		}
         
