#19 마이페이지 화면 연결 supportingCompany제외한 나머지화면 잘 구현되며 supportingCompany 	페이지 css , script 구문 추가해주길 요망 -hyeon-

--- a/JOBNOM/src/main/webapp/resources/css/mypage/followingEnt.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/followingEnt.css
@@ -73,9 +73,9 @@
         .maininfo{
             padding: 56px 26px 56px 26px;
         }
-        .one{
-            padding: 28px 24px 45px 24;
-        }
+/*         .one{ */
+/*             padding: 28px 24px 45px 24; */
+/*         } */
         #maincon{
             /* margin: 0 auto; */
             padding: 0;
