--- a/JOBNOM/src/main/webapp/resources/css/mypage/interviewList.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/interviewList.css
@@ -70,9 +70,9 @@
             margin-bottom: 100px;
             background-color: #fff;
         }
-        .one{
-            padding: 28px 24px 45px 24;
-        }
+/*         .one{ */
+/*             padding: 28px 24px 45px 24; */
+/*         } */
         .maininfo{
             padding: 56px 26px 56px 26px;
         }
