#07 헤더 기업 버튼 눌렀을때 기능, 기업 더보기 기능, 공고 더보기 기능 -ys

--- a/JOBNOM/src/main/webapp/resources/css/search/searchResultMoreList.css
+++ b/JOBNOM/src/main/webapp/resources/css/search/searchResultMoreList.css
@@ -116,6 +116,13 @@ option {
     clear: both;
     margin-right: 0;
 }
+.col1Wrap .frow_ty1 {
+    position: absolute;
+    bottom: 8px;
+    right: 15px;
+    clear: both;
+    margin-right: 0;
+}
 .filterWrap .result {
     float: left;
     display: block;
