#20 header.css 세션 전체 margin-top 150~200 	이력서 패키지쪽 객체들 DB에 맞게 수정 및 추가 	이력서 자동검색어 하는중 (업무 및 스킬)

--- a/JOBNOM/src/main/webapp/resources/css/header.css
+++ b/JOBNOM/src/main/webapp/resources/css/header.css
@@ -1,6 +1,21 @@
 @charset "UTF-8";
 
+/* 폰트적용 */
+@font-face{
+	font-family:'함초롱돋움R';
+	src:url("/mws/KH/Libraries/함초롱돋움R.ttf") fontformat("truetype");
+	
+}
+body{
+	font-family:함초롱돋움R;
+}
 /* 헤더바 */
+	section{
+		margin-top:150px;
+	}
+	#content{
+		margin-top:100px;
+	}
       .headerContainerWrap{
          background-color: #fff;
          border-bottom: 1px solid #e5e6e9;
