#11 기업더보기 기업 팔로우 기능 -ys-

--- a/JOBNOM/src/main/webapp/resources/css/search/searchResultMoreList.css
+++ b/JOBNOM/src/main/webapp/resources/css/search/searchResultMoreList.css
@@ -218,8 +218,8 @@ dt .btn_heart2 {
     z-index: 99;
     border: none;
     color: red;
-    border-color: red;;
-    display: none;
+    border-color: red;
+    display: inline-block;
    
 }
 
