--- a/JOBNOM/src/main/webapp/resources/css/Hire/FindingMeDetail.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/FindingMeDetail.css
@@ -2,7 +2,7 @@
 #findingMeDetail{
     margin-top: 30px;
     padding-top:20px ;
-    display: none;
+
     width: 100%;
     position: relative;
     height: 330px;
@@ -54,6 +54,8 @@
 .findingMeDetailTitleAnnouncement{
     padding-top: 110px;
     padding-left: 10px;
+    width: 300px;
+
   
 }
 .findingMeDetailSummary{
