--- a/JOBNOM/src/main/webapp/resources/css/Hire/insertReview.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/insertReview.css
@@ -78,7 +78,7 @@ padding-left:130px ;
     margin-top: 20px;
     margin-left: 40px;
     border-radius: 12px;
-    width: 600px;
+    width: 680px;
     height: 220px;
  background-image: url("../../image/Hire/ll.png");
     background-size: cover;
@@ -88,7 +88,6 @@ padding-left:130px ;
     display: flex;
 }
 .reviewBtnInsert{
-
 
     border-radius: 12px;
     right: 0;
@@ -102,8 +101,9 @@ padding-left:130px ;
     font-weight: bold;
     border-radius: 5px;
     margin-right: 10px;
-    margin-top: 40px;
-    margin-left: 80px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 90px;
 
 
 }
@@ -122,8 +122,9 @@ padding-left:130px ;
     font-weight: bold;
     border-radius: 5px;
     margin-right: 10px;
-    margin-top: 40px;
-    margin-left: 80px;
+    margin-top: 20px;
+     margin-bottom: 20px;
+    margin-left: 90px;
 
 }
 
@@ -143,8 +144,9 @@ padding-left:130px ;
     top: 0;
     width: 100%;
     height: 100%;
-    padding-top:100px;
+
     z-index:99;
+   
 
     background-color: rgba(0, 0, 0, 0.755);
 
@@ -158,7 +160,7 @@ padding-left:130px ;
 #popmenu {
 
     width: 40%;
-    height: 700px;
+    height: 710px;
     background: #fff;
     margin-left: 310px;
     margin-top: 30px;
@@ -359,6 +361,7 @@ padding-left:130px ;
     border-radius: 5px;
     margin-right: 10px;
     margin-top: 40px;
+    margin-bottom: 20px;
     margin-left: 60px;
 
 }
