#21 이력서 작업중 member,resume관련 패키지 및 resouce 바뀌면 바로 말해줄것 	-hyeon-

--- a/JOBNOM/src/main/webapp/resources/css/mypage/myProfile.css
+++ b/JOBNOM/src/main/webapp/resources/css/mypage/myProfile.css
@@ -183,3 +183,16 @@
             z-index: 999;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.08);
         }
+        .values{
+        	text-decoration:none;
+        	color: black;
+        }
+        .values:hover{
+        	text-decoration:none;
+        	color: black;
+        }
+        .keyword{
+        	list-style:none;
+			padding-left:11px;
+			margin:0;
+        }
