#13 기업 즐겨찾기 기능 완성 , index.jsp 배너 랜덤 출력, 리뷰 리스트 출력 -ys-

--- a/JOBNOM/src/main/webapp/resources/css/index.css
+++ b/JOBNOM/src/main/webapp/resources/css/index.css
@@ -9,7 +9,17 @@
     
  
    
-
+	.jp-quote{
+    display: inline-block;
+    height: 32px;
+    margin-bottom: 8px;
+    font-size: 32px;
+    color: #e5e6e9;
+	
+	}
+	.jp-quote:before {
+    content: "\e900";
+}
 
     /* 메인 페이지 전체 css */
     #contents_wrap_new {
