--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireMyHire.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireMyHire.css
@@ -226,24 +226,29 @@
 
 }
 .myHyreSupportList1{
-	width:200px;
-    text-align: center;
+	width:300px;
+	height:20px;
+	text-align:center;
+	margin-left:-20px;
     padding-top: 5px;
-    padding-left: 6px;
+
 }
 .myHyreSupportList2{
 
-    text-align: center;
+text-align:center;
     padding-top: 5px;
     width:500px;
+
+    margin-left: -100px;
 
 }
 
 .myHyreSupportList3{
-    text-align: center;
+text-align:center;
      width:200px;
 
 }
 .myHire1{
 	border:solid;
+
 }
