리뷰등록 가능 -하준-

--- a/JOBNOM/src/main/webapp/resources/css/Hire/HireHome.css
+++ b/JOBNOM/src/main/webapp/resources/css/Hire/HireHome.css
@@ -23,7 +23,12 @@ a{
   }
   body{
     width: 100%;
-
+ 
+  }
+  #aaaa{
+     background-image: url(https://source.unsplash.com/random);
+ color:rgb(255, 255, 255);
+   background-size: cover;
   }
   
   .a{
