--- a/JOBNOM/src/main/webapp/resources/css/search/searchResultList.css
+++ b/JOBNOM/src/main/webapp/resources/css/search/searchResultList.css
@@ -16,7 +16,6 @@ body{
 #contents_wrap .mainContents {
     position: relative;
     z-index: 10;
-    padding-top: 20px;
 }
 
 
@@ -24,12 +23,14 @@ body{
     position: relative;
     width: 960px;
     margin: 0 auto;
+    margin-top: 83px;
     padding: 0 0 15px 0;
 }
 .result_company {
     position: relative;
     box-sizing: border-box;
     border: 1px solid #e8e9eb;
+    margin-top: 98px;
 }
 .result_hd .tit_txt {
     font-size: 16px;
